database seeded + seed.js

--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "sonet-",
+  "name": "sonet-Social-Network-API",
   "version": "1.0.0",
   "description": "A Social Network api that uses a NoSQL database",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index",
+    "seed": "node utils/seed"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^7.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
+  }
 }
