--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-router": "^0.0.1",
     "mongoose": "^7.0.2"
   },
   "devDependencies": {
